# fusion360_mcp

./: .gitignore  API_LIST_USAGE.md  CORRECT_ARCHITECTURE.md  PLUGIN_RELOAD_GUIDE.md  README.md  env.example  pyproject.toml  requirements.txt  run_quick_test.py
addin/: client.py  fusion360_mcp_addin.py
addin/fusion360_mcp_addin/: common.py  fusion360_mcp_addin.manifest  fusion360_mcp_addin.py  fusion360_mcp_addin_backup.py  fusion360_mcp_addin_improved.py  fusion360_mcp_addin_refactored.py  fusion360_mcp_addin_safe.py  fusion360_mcp_addin_simple.py  fusion360_mcp_addin_simple_backup.py  fusion360_mcp_addin_with_logs.py
scripts/: check_ports.py
src/fusion360_mcp/: __init__.py  config.py  document_tools.py  execute_tools.py  fusion360_api.py  get_view.py  help.py  main.py  object_tools.py  part_tools.py  server.py  tools.py  view_tools.py
tests/: INTEGRATION_TEST_GUIDE.md  README.md  __init__.py  quick_test.py  run_tests.py  test_addin_startup.py  test_api_list.py  test_base.py  test_document_tools.py  test_execute_tools.py  test_get_view_unit.py  test_object_tools.py  test_part_tools.py  test_real_integration.py  test_simple_integration.py  test_single_operations.py  test_view_functionality.py  test_view_tools.py
